# FinText-LLM

./: README.md  README_CN.md  main.py  pyproject.toml
docs/: edgar-corpus.md
scripts/: download_edgar_2020.py
src/: __init__.py
src/data/: __init__.py  loader.py
src/llm/: __init__.py  client.py
